[gd_scene load_steps=9 format=3 uid="uid://dm45f06mpg7uc"]

[ext_resource type="SpriteFrames" uid="uid://dt06n400xyk27" path="res://resources/character_c_sprite_frames.tres" id="1_7m2q4"]
[ext_resource type="Script" uid="uid://ckinges54fv4w" path="res://scenes/game_objects/multiplayer/multiplayer_controller.gd" id="1_n0alt"]
[ext_resource type="Script" uid="uid://i5lsojkrl2cd" path="res://scripts/multiplayer/multiplayer_input.gd" id="2_iphor"]
[ext_resource type="Texture2D" uid="uid://3cyvp4vj3a43" path="res://assets/tilesets/monochrome-transparent_packed.png" id="4_eyg1r"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_iphor"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:do_action")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:direction")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Visuals/AnimatedSprite2D:self_modulate")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_eyg1r"]
properties/0/path = NodePath("InputSynchronizer:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:mouse_location")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n0alt"]
size = Vector2(8, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f46t"]
atlas = ExtResource("4_eyg1r")
region = Rect2(368, 320, 16, 16)

[node name="MultiplayerPlayer" type="CharacterBody2D" groups=["Player"]]
collision_layer = 0
script = ExtResource("1_n0alt")
move_speed = 150.0

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_iphor")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_eyg1r")
script = ExtResource("2_iphor")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_n0alt")

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
self_modulate = Color(0.956863, 0.705882, 0.105882, 1)
sprite_frames = ExtResource("1_7m2q4")
animation = &"move"
autoplay = "default"
offset = Vector2(0, -8)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="DirectionArrow" type="Sprite2D" parent="."]
rotation = 1.5708
texture = SubResource("AtlasTexture_7f46t")
offset = Vector2(0, -16)
